Add - Piano scales image

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,9 +9,25 @@
         android:id="@+id/tv_scale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@id/center"
         android:layout_centerInParent="true"
-        android:text="C-B"
+        android:text="E#"
         android:textSize="80sp" />
+
+    <View
+        android:id="@+id/center"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true"/>
+
+    <ImageView
+        android:id="@+id/img_piano"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_scale"
+        android:layout_centerInParent="true"
+        android:background="@drawable/ic_scale_c"
+        android:contentDescription="Piano scale image" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +41,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#4C8DC0"
-            android:alpha="0.5"
+            android:alpha="0"
 
             />
 
@@ -36,9 +51,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#220033"
-            android:alpha="0.5"
+            android:alpha="0"
             />
-
     </LinearLayout>
 
 </RelativeLayout>
