Add - Scale images with octave

--- a/app/src/main/res/drawable/ic_scale_g_sharp_a_flat.xml
+++ b/app/src/main/res/drawable/ic_scale_g_sharp_a_flat.xml
@@ -4,158 +4,355 @@
     android:viewportWidth="640"
     android:viewportHeight="640">
   <path
-      android:pathData="M199,0.97L285.69,0.97L285.69,640.12L199,640.12L199,0.97Z"
-      android:fillColor="#9ac660"
-      android:fillAlpha="1"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M199,0.97L285.69,0.97L285.69,640.12L199,640.12L199,0.97Z"
-      android:strokeAlpha="1"
-      android:strokeWidth="1"
-      android:fillAlpha="0"
-      android:strokeColor="#000000"/>
-  <path
-      android:pathData="M285.66,1L372.34,1L372.34,640.14L285.66,640.14L285.66,1Z"
-      android:fillColor="#ffffff"
-      android:fillAlpha="1"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M285.66,1L372.34,1L372.34,640.14L285.66,640.14L285.66,1Z"
-      android:strokeAlpha="1"
-      android:strokeWidth="1"
-      android:fillAlpha="0"
-      android:strokeColor="#000000"/>
-  <path
-      android:pathData="M257.36,0.01L310.64,0.01L310.64,378.22L257.36,378.22L257.36,0.01Z"
-      android:fillColor="#9ac660"
-      android:fillAlpha="1"/>
-  <group>
-    <clip-path android:pathData="M257.36,0.01L310.64,0.01L310.64,378.22L257.36,378.22L257.36,0.01Z M 0,0"/>
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M257.36,0.01L310.64,0.01L310.64,378.22L257.36,378.22L257.36,0.01Z"
-        android:strokeAlpha="1"
-        android:strokeWidth="20"
-        android:fillAlpha="0"
-        android:strokeColor="#020202"/>
-  </group>
-  <path
-      android:pathData="M459,0.86L545.69,0.86L545.69,640L459,640L459,0.86Z"
-      android:fillColor="#9ac660"
-      android:fillAlpha="1"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M459,0.86L545.69,0.86L545.69,640L459,640L459,0.86Z"
-      android:strokeAlpha="1"
-      android:strokeWidth="1"
-      android:fillAlpha="0"
-      android:strokeColor="#000000"/>
-  <path
-      android:pathData="M547,0.64L633.69,0.64L633.69,639.78L547,639.78L547,0.64Z"
-      android:fillColor="#9ac660"
-      android:fillAlpha="1"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M547,0.64L633.69,0.64L633.69,639.78L547,639.78L547,0.64Z"
-      android:strokeAlpha="1"
-      android:strokeWidth="1"
-      android:fillAlpha="0"
-      android:strokeColor="#000000"/>
-  <path
-      android:pathData="M25.46,0.29L112.15,0.29L112.15,639.43L25.46,639.43L25.46,0.29Z"
-      android:fillColor="#ffffff"
-      android:fillAlpha="1"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M25.46,0.29L112.15,0.29L112.15,639.43L25.46,639.43L25.46,0.29Z"
-      android:strokeAlpha="1"
-      android:strokeWidth="1"
-      android:fillAlpha="0"
-      android:strokeColor="#000000"/>
-  <path
-      android:pathData="M112.17,0.86L198.86,0.86L198.86,640L112.17,640L112.17,0.86Z"
-      android:fillColor="#ffffff"
-      android:fillAlpha="1"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M112.17,0.86L198.86,0.86L198.86,640L112.17,640L112.17,0.86Z"
-      android:strokeAlpha="1"
-      android:strokeWidth="1"
-      android:fillAlpha="0"
-      android:strokeColor="#000000"/>
-  <path
-      android:pathData="M512.72,-0.21L566,-0.21L566,378L512.72,378L512.72,-0.21Z"
-      android:fillColor="#000000"
-      android:fillAlpha="1"/>
-  <group>
-    <clip-path android:pathData="M512.72,-0.21L566,-0.21L566,378L512.72,378L512.72,-0.21Z M 0,0"/>
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M512.72,-0.21L566,-0.21L566,378L512.72,378L512.72,-0.21Z"
-        android:strokeAlpha="1"
-        android:strokeWidth="20"
-        android:fillAlpha="0"
-        android:strokeColor="#000000"/>
-  </group>
-  <path
-      android:pathData="M0.99,-0.57L54.27,-0.57L54.27,377.64L0.99,377.64L0.99,-0.57Z"
-      android:fillColor="#9ac660"
-      android:fillAlpha="1"/>
-  <group>
-    <clip-path android:pathData="M0.99,-0.57L54.27,-0.57L54.27,377.64L0.99,377.64L0.99,-0.57Z M 0,0"/>
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M0.99,-0.57L54.27,-0.57L54.27,377.64L0.99,377.64L0.99,-0.57Z"
-        android:strokeAlpha="1"
-        android:strokeWidth="20"
-        android:fillAlpha="0"
-        android:strokeColor="#000000"/>
-  </group>
-  <path
-      android:pathData="M87.36,-0.88L140.64,-0.88L140.64,377.32L87.36,377.32L87.36,-0.88Z"
-      android:fillColor="#9ac660"
-      android:fillAlpha="1"/>
-  <group>
-    <clip-path android:pathData="M87.36,-0.88L140.64,-0.88L140.64,377.32L87.36,377.32L87.36,-0.88Z M 0,0"/>
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M87.36,-0.88L140.64,-0.88L140.64,377.32L87.36,377.32L87.36,-0.88Z"
-        android:strokeAlpha="1"
-        android:strokeWidth="20"
-        android:fillAlpha="0"
-        android:strokeColor="#000000"/>
-  </group>
-  <path
-      android:pathData="M373.31,0.58L460,0.58L460,639.72L373.31,639.72L373.31,0.58Z"
-      android:fillColor="#ffffff"
-      android:fillAlpha="1"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M373.31,0.58L460,0.58L460,639.72L373.31,639.72L373.31,0.58Z"
-      android:strokeAlpha="1"
-      android:strokeWidth="1"
-      android:fillAlpha="0"
-      android:strokeColor="#000000"/>
-  <path
-      android:pathData="M347.59,0.12L400.87,0.12L400.87,378.32L347.59,378.32L347.59,0.12Z"
-      android:fillColor="#9ac660"
-      android:fillAlpha="1"/>
-  <group>
-    <clip-path android:pathData="M347.59,0.12L400.87,0.12L400.87,378.32L347.59,378.32L347.59,0.12Z M 0,0"/>
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M347.59,0.12L400.87,0.12L400.87,378.32L347.59,378.32L347.59,0.12Z"
-        android:strokeAlpha="1"
-        android:strokeWidth="20"
-        android:fillAlpha="0"
-        android:strokeColor="#020202"/>
-  </group>
-  <path
-      android:pathData="M-8.28,0L629.81,0L629.81,1.38L-8.28,1.38L-8.28,0Z"
+      android:pathData="M613.78,0L613.78,1.38L8.24,1.38L8.24,0L613.78,0Z"
       android:fillColor="#000000"
       android:fillAlpha="1"/>
   <path
-      android:pathData="M23.66,639L633,639L633,640.38L23.66,640.38L23.66,639Z"
+      android:fillColor="#FF000000"
+      android:pathData="M613.78,0L613.78,1.38L8.24,1.38L8.24,0L613.78,0Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M591.26,639L591.26,640.38L47.2,640.38L47.2,639L591.26,639Z"
       android:fillColor="#000000"
       android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M591.26,639L591.26,640.38L47.2,640.38L47.2,639L591.26,639Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M-581.19,422.95L-581.19,424.33L-1190.52,424.33L-1190.52,422.95L-581.19,422.95Z"
+      android:fillColor="#000000"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M-581.19,422.95L-581.19,424.33L-1190.52,424.33L-1190.52,422.95L-581.19,422.95Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M-581.19,422.95L-581.19,424.33L-1190.52,424.33L-1190.52,422.95L-581.19,422.95Z"
+      android:fillColor="#000000"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M-581.19,422.95L-581.19,424.33L-1190.52,424.33L-1190.52,422.95L-581.19,422.95Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M270.02,0.97L270.02,640.12L190.31,640.12L190.31,0.97L270.02,0.97Z"
+      android:fillColor="#9ac660"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M270.02,0.97L270.02,640.12L190.31,640.12L190.31,0.97L270.02,0.97Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M270.02,0.97L270.02,640.12L190.31,640.12L190.31,0.97L270.02,0.97Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M270.02,0.97L270.02,640.12L190.31,640.12L190.31,0.97L270.02,0.97Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M349.7,1L349.7,640.14L269.99,640.14L269.99,1L349.7,1Z"
+      android:fillColor="#ffffff"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M349.7,1L349.7,640.14L269.99,640.14L269.99,1L349.7,1Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M349.7,1L349.7,640.14L269.99,640.14L269.99,1L349.7,1Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M349.7,1L349.7,640.14L269.99,640.14L269.99,1L349.7,1Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M292.96,0.01L292.96,378.22L243.97,378.22L243.97,0.01L292.96,0.01Z"
+      android:fillColor="#9ac660"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M292.96,0.01L292.96,378.22L243.97,378.22L243.97,0.01L292.96,0.01Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M292.96,4.01L292.96,382.22L243.97,382.22L243.97,4.01L292.96,4.01Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M292.96,4.01L292.96,382.22L243.97,382.22L243.97,4.01L292.96,4.01Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="10"
+      android:fillAlpha="0"
+      android:strokeColor="#020202"/>
+  <path
+      android:pathData="M509.09,0.86L509.09,640L429.38,640L429.38,0.86L509.09,0.86Z"
+      android:fillColor="#9ac660"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M509.09,0.86L509.09,640L429.38,640L429.38,0.86L509.09,0.86Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M509.09,0.86L509.09,640L429.38,640L429.38,0.86L509.09,0.86Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M509.09,0.86L509.09,640L429.38,640L429.38,0.86L509.09,0.86Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M590,0.64L590,639.78L510.29,639.78L510.29,0.64L590,0.64Z"
+      android:fillColor="#9ac660"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M590,0.64L590,639.78L510.29,639.78L510.29,0.64L590,0.64Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M590,0.64L590,639.78L510.29,639.78L510.29,0.64L590,0.64Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M590,0.64L590,639.78L510.29,639.78L510.29,0.64L590,0.64Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M110.45,0.29L110.45,639.43L30.74,639.43L30.74,0.29L110.45,0.29Z"
+      android:fillColor="#ffffff"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M110.45,0.29L110.45,639.43L30.74,639.43L30.74,0.29L110.45,0.29Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M110.45,0.29L110.45,639.43L30.74,639.43L30.74,0.29L110.45,0.29Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M110.45,0.29L110.45,639.43L30.74,639.43L30.74,0.29L110.45,0.29Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M190.18,0.86L190.18,640L110.47,640L110.47,0.86L190.18,0.86Z"
+      android:fillColor="#ffffff"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M190.18,0.86L190.18,640L110.47,640L110.47,0.86L190.18,0.86Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M190.18,0.86L190.18,640L110.47,640L110.47,0.86L190.18,0.86Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M190.18,0.86L190.18,640L110.47,640L110.47,0.86L190.18,0.86Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M527.76,-0.21L527.76,378L478.77,378L478.77,-0.21L527.76,-0.21Z"
+      android:fillColor="#000000"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M527.76,-0.21L527.76,378L478.77,378L478.77,-0.21L527.76,-0.21Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M527.76,4.01L527.76,382.22L478.77,382.22L478.77,4.01L527.76,4.01Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M527.76,4.01L527.76,382.22L478.77,382.22L478.77,4.01L527.76,4.01Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="10"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M57.23,-0.57L57.23,377.64L8.24,377.64L8.24,-0.57L57.23,-0.57Z"
+      android:fillColor="#9ac660"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M57.23,-0.57L57.23,377.64L8.24,377.64L8.24,-0.57L57.23,-0.57Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M57.23,4L57.23,382.21L8.24,382.21L8.24,4L57.23,4Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M57.23,4L57.23,382.21L8.24,382.21L8.24,4L57.23,4Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="10"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M136.65,-0.88L136.65,377.32L87.66,377.32L87.66,-0.88L136.65,-0.88Z"
+      android:fillColor="#9ac660"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M136.65,-0.88L136.65,377.32L87.66,377.32L87.66,-0.88L136.65,-0.88Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M136.65,4.02L136.65,382.22L87.66,382.22L87.66,4.02L136.65,4.02Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M136.65,4.02L136.65,382.22L87.66,382.22L87.66,4.02L136.65,4.02Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="10"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M430.3,0.58L430.3,639.72L350.59,639.72L350.59,0.58L430.3,0.58Z"
+      android:fillColor="#ffffff"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M430.3,0.58L430.3,639.72L350.59,639.72L350.59,0.58L430.3,0.58Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M430.3,0.58L430.3,639.72L350.59,639.72L350.59,0.58L430.3,0.58Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M430.3,0.58L430.3,639.72L350.59,639.72L350.59,0.58L430.3,0.58Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M375.93,0.12L375.93,378.32L326.94,378.32L326.94,0.12L375.93,0.12Z"
+      android:fillColor="#9ac660"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M375.93,0.12L375.93,378.32L326.94,378.32L326.94,0.12L375.93,0.12Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M375.93,4.02L375.93,382.22L326.94,382.22L326.94,4.02L375.93,4.02Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M375.93,4.02L375.93,382.22L326.94,382.22L326.94,4.02L375.93,4.02Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="10"
+      android:fillAlpha="0"
+      android:strokeColor="#020202"/>
+  <path
+      android:pathData="M586.32,0L586.32,1.38L13.58,1.38L13.58,0L586.32,0Z"
+      android:fillColor="#000000"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M586.32,0L586.32,1.38L13.58,1.38L13.58,0L586.32,0Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M589.37,639L589.37,640.38L29.09,640.38L29.09,639L589.37,639Z"
+      android:fillColor="#000000"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M589.37,639L589.37,640.38L29.09,640.38L29.09,639L589.37,639Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M622.3,5.44L622.3,383.65L573.31,383.65L573.31,5.44L622.3,5.44Z"
+      android:fillColor="#9ac660"
+      android:fillAlpha="1"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M622.3,5.44L622.3,383.65L573.31,383.65L573.31,5.44L622.3,5.44Z"
+      android:strokeAlpha="0"
+      android:strokeWidth="1"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
+  <path
+      android:pathData="M622.3,5.01L622.3,383.22L573.31,383.22L573.31,5.01L622.3,5.01Z"
+      android:fillColor="#000000"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M622.3,5.01L622.3,383.22L573.31,383.22L573.31,5.01L622.3,5.01Z"
+      android:strokeAlpha="1"
+      android:strokeWidth="10"
+      android:fillAlpha="0"
+      android:strokeColor="#000000"/>
 </vector>
