--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rl_main_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -70,9 +71,9 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_below="@id/tv_right_hand"
-            android:layout_centerHorizontal="true">
+            android:layout_centerHorizontal="true"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/img_left_hand"
@@ -86,58 +87,112 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/ic_right_hand"
-                android:contentDescription="Piano scale image"/>
+                android:contentDescription="Piano scale image" />
 
         </LinearLayout>
 
     </RelativeLayout>
 
 
-<LinearLayout
-android:layout_height="match_parent"
-android:layout_width="match_parent"
-android:orientation="horizontal"
-android:weightSum="2">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="2">
 
-<RelativeLayout
-    android:id="@+id/btn_prev_scale"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:layout_width="0dp">
+        <RelativeLayout
+            android:id="@+id/btn_prev_scale"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
-    <ImageView
-        android:alpha="0.5"
-        android:background="@drawable/ic_left_arrow"
-        android:id="@+id/img_prev_arrow"
-        android:layout_centerVertical="true"
+            <ImageView
+                android:id="@+id/img_prev_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_margin="30dp"
+                android:alpha="0.5"
+                android:background="@drawable/ic_left_arrow"
+                android:visibility="gone" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/btn_next_scale"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_margin="30dp"
+                android:alpha="0.5"
+                android:background="@drawable/ic_arrow_right" />
+
+        </RelativeLayout>
+    </LinearLayout>
+
+    <View
+        android:id="@+id/scroll_up_detect"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+    <RadioGroup
+        android:id="@+id/toggle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_width="wrap_content"
-        android:visibility="gone" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="38dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:padding="10dp"
+        android:background="@drawable/radio_major_minor_background"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="1dp"
+            android:layout_marginLeft="1dp"
+            android:id="@+id/rdo_major"
+            android:background="@drawable/toggle_major_minor_background"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:gravity="center"
+            android:text="Major"
+            android:textColor="@color/DarkOrchid"
+            android:textSize="24sp"
+            android:checked="true"/>
+
+        <RadioButton
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="1dp"
+            android:id="@+id/rdo_minor"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/toggle_major_minor_background"
+            android:button="@null"
+            android:gravity="center"
+            android:text="Minor"
+            android:textColor="@color/Maroon"
+            android:textSize="24sp"/>
+    </RadioGroup>
+
+    <!--<androidx.appcompat.widget.SwitchCompat
+        app:track="@drawable/switch_major_minor_track"
+        android:thumb="@drawable/switch_major_minor_thumb"
+        app:switchMinWidth="70dp"
+        />-->
+    <!--        app:track="@drawable/switch_major_minor_track"-->
+    <!--        android:thumb="@drawable/switch_major_minor_thumb"-->
 
 </RelativeLayout>
-
-<RelativeLayout
-    android:id="@+id/btn_next_scale"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:layout_width="0dp">
-
-    <ImageView
-        android:alpha="0.5"
-        android:background="@drawable/ic_arrow_right"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_width="wrap_content" />
-
-</RelativeLayout>
-</LinearLayout>
-
-<View
-android:id="@+id/scroll_up_detect"
-android:layout_height="match_parent"
-android:layout_width="match_parent" />
-
-    </RelativeLayout>
